exports[`Reducers::Touch fetchedHours action matches the snapshot 1`] = `
Object {
  "hours": Object {},
  "is_fetching_hours": false,
  "is_fetching_slides": false,
}
`;

exports[`Reducers::Touch fetchedSlides action matches the snapshot 1`] = `
Object {
  "hours": Object {},
  "is_fetching_hours": false,
  "is_fetching_slides": false,
}
`;

exports[`Reducers::Touch fetchingHours action matches the snapshot 1`] = `
Object {
  "hours": Object {},
  "is_fetching_hours": true,
  "is_fetching_slides": false,
}
`;

exports[`Reducers::Touch fetchingSlides action matches the snapshot 1`] = `
Object {
  "hours": Object {},
  "is_fetching_hours": false,
  "is_fetching_slides": true,
}
`;

exports[`Reducers::Touch matches the snapshot 1`] = `[Function]`;

exports[`Reducers::Touch setHours action matches the snapshot 1`] = `
Object {
  "hours": undefined,
  "is_fetching_hours": false,
  "is_fetching_slides": false,
}
`;
